--- a/blackBoard/build.xml
+++ b/blackBoard/build.xml
@@ -7,9 +7,9 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="blackBoard" default="default" basedir=".">
+<project name="blackBoard" basedir=".">
     <description>Builds, tests, and runs the project blackBoard.</description>
-    <import file="nbproject/build-impl.xml"/>
+    <import file="blackBoard/nbproject/build-impl.xml"/>
     <!--
 
     There exist several targets which are by default empty and which can be 
