--- a/blackBoard/nbproject/private/private.properties
+++ b/blackBoard/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jose Silva\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\rljenkin\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
